# aethernet-numeric

./: .gitmodules  CMakeLists.txt  CPPLINT.cfg  README.md
.github/workflows/: ci-cd-tests.yml
numeric/: fixed_point.h  tiered_int.h
tests/: CMakeLists.txt  main.cpp  mstream.h  test-fixed-point.cpp  test-tiered-int.cpp
